--- a/style.css
+++ b/style.css
@@ -5,3 +5,69 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: -webkit-linear-gradient(left,#103f02c4, #2d5503d0);
+    padding:20px;
+}
+
+.wrapper{
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.wrapper .card{
+    width:calc(33% - 20px);
+    background: #fff;
+    height: 300px;
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+ .wrapper .card .circle{
+    width: 150px;
+    height: 150px;
+    border:8px solid #3cff009d;
+    border-radius: 50%;
+    position: relative;
+ }
+
+ .card .circle .box,
+ .card .circle .box span{
+     position: absolute;
+     top:50%;
+     left: 50%;
+ }
+ .card .circle .box{
+     width: 100%;
+     height: 100%;
+     background: #fff;
+     transform: translate(-50%,-50%);
+     border-radius: 50%;
+
+ }
+
+ .card .circle .box span,
+ .wrapper .card .text{
+    background: -webkit-linear-gradient(left,#103f02c4, #2d5503d0);
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
+    }
+    
+.card .circle .box span{
+    transform: translate(-50%,-50%);
+    font-size: 36px;
+    font-weight: 600;
+ }
+
+ .card .text{
+     font-size: 20px;
+     font-weight: 500;
+ }
